# CMakePratice

./: README.md  cmake 入门攻略.md
t1/: CMakeLists.txt
t2/: CMakeLists.txt  runhello.sh
t2/doc/: hello.txt
t2/src/: CMakeLists.txt  main.cpp
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.cpp  hello.h
t4/: CMakeLists.txt
t4/subbinary/: CMakeLists.txt  main.cpp
t4/sublib1/: CMakeLists.txt
t4/sublib1/include/: sublib1.h
t4/sublib1/src/: sublib1.cpp
t4/sublib2/: CMakeLists.txt
t4/sublib2/include/: sublib2.h
t4/sublib2/src/: sublib2.cpp
t4/sublib3/: CMakeLists.txt
t4/sublib3/include/: sublib3.h
t5/: CMakeLists.txt  main.cpp
